--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,4 @@
   border:0px;
   padding-left: 0px;
   }
+  body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 { font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;}  
