--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,11 @@
     font-size: 16px;
 
  }
+ .navbar-default {
+  background-color: #ffffff;
+  border-color: #E7E7E7;
+}
+/* Title */
+.navbar-default .navbar-brand {
+  color: #777;
+}
