--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@
     font-size: 16px;
 
  }
+
+ .f20{
+  font-size: 20px;
+ }
+ .f18{
+  font-size: 18px;
+ }
  .navbar-default {
   background-color: #ffffff;
   border-color: #E7E7E7;
